# hypermusiclife-mastering

./: .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  requirements.txt  wrangler.jsonc
MasteringBackend/: .dockerignore  Dockerfile  README.md  pyproject.toml
MasteringBackend/mastering/: __init__.py  __main__.py  cli.py  config.py  regression.py
MasteringBackend/mastering/api/: app.py  errors.py
MasteringBackend/mastering/application/: track_jobs.py  track_payloads.py
MasteringBackend/mastering/contracts/: __init__.py  analysis.py  decision.py  jobs.py  processing.py  regression.py
MasteringBackend/mastering/domain/: __init__.py  analyzer.py  decision_engine.py  processor.py
MasteringBackend/mastering/jobs/: __init__.py  models.py  repository.py  runner.py
MasteringBackend/mastering/orchestration/: __init__.py  job_queue.py  pipeline.py  regression_runner.py
MasteringBackend/mastering/stems/: __init__.py  compare_rebalance_modes.py  compare_separation.py  make_variants.py  rebalance_master.py  similarity_report.py  stem_lab.py
MasteringBackend/mastering/storage/: __init__.py  audio_io.py  object_store.py  track_storage.py
MasteringBackend/mastering/utils/: audio_math.py  reporting.py
MasteringBackend/regression_baselines/: latest.json
MasteringBackend/regression_baselines/20260407T105709Z/: loud_electronic.json  moderate_pop.json  quiet_acoustic.json
MasteringBackend/regression_baselines/20260407T111248Z/: DEMO_85 - Fino a qui - POP - PAI-095.json  DEMO_87 - Plus Loin Que Nos Peurs - POP - PAI-097.json  (+4 more)
scripts/: README.md  (+1 more)
(+28 files in other folders)
